--- a/findly-builder/src/app/components/attributes-list/attributes-list.component.html
+++ b/findly-builder/src/app/components/attributes-list/attributes-list.component.html
@@ -57,7 +57,7 @@
     <div *ngIf="!(attributes?.groups && attributes?.groups.length) && !loading" class="text-center">    
         <div class="empty-questions-selected" *ngIf="!(rules && rules.length) && !loadingRules">
             <img src="assets/images/icons/empty_ill.svg">
-            <div class="heading">No Attributes added yet</div>
+            <div class="heading">No fields added yet</div>
             <!-- <div class="desc">Please add rules</div> -->
             <button class="kr-sg-button-secondary btn_lg" (click)="addEditAttibutes()">Add</button>
         </div>
