field delete/edit changes

--- a/findly-builder/src/app/components/attributes-list/attributes-list.component.scss
+++ b/findly-builder/src/app/components/attributes-list/attributes-list.component.scss
@@ -245,7 +245,8 @@
                     }
                     &:hover{
                         .actions{                               
-                            display: block;                 
+                            display: flex;
+                            justify-content: space-between;            
                         }
                         .kr-sg-checkbox{
                             visibility: visible;
