--- a/findly-builder/src/app/components/content-source/content-source.component.scss
+++ b/findly-builder/src/app/components/content-source/content-source.component.scss
@@ -616,6 +616,11 @@
                 }
             }
         }
+        .allow-list-data-label{
+            img{
+                cursor: pointer;
+            }
+        }
         .allow-urls-sec{
             align-items: center;
             margin: 10px 0;
