--- a/findly-builder/src/app/components/app-header/app-header.component.html
+++ b/findly-builder/src/app/components/app-header/app-header.component.html
@@ -24,7 +24,7 @@
                     </div>
                     <div class="headerMenuTab">Analytics</div>
                     <div class="headerMenuTab">Experiments</div>
-                    <div class="headerMenuTab">Settings <span class="statusIndicator"></span></div>
+                    <div class="headerMenuTab">Settings <span class="statusIndicator d-none"></span></div>
                 </div>
             </div>
             <ul class="navbar-nav nav-flex-icons align-items-center right-menu-content flex-row justify-content-end"> 
